Assignment 2 Second Commit

--- a/public/assignment/widget-heading.html
+++ b/public/assignment/widget-heading.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Widget Header</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -40,12 +41,14 @@
                       rows="5"
                       class="form-control"
                       placeholder="Text"
-                      id="text"></textarea>
+                      id="text">US Senate Reaches Compromise on Emergency Zika Funding
+            </textarea>
 
             <label for="size">Size</label>
             <input name="size"
                    class="form-control"
-                   placeholder="3"
+                   placeholder="Size"
+                   value="3"
                    id="size"/>
 
             <a class="btn btn-default btn-danger btn-block"
