--- a/public/assignment/widget-image.html
+++ b/public/assignment/widget-image.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Widget Image</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -32,7 +33,7 @@
             <label for="name">Name</label>
             <input name="name"
                    class="form-control"
-                   placeholder="Header"
+                   placeholder="Name"
                    id="name"/>
 
             <label for="text">Text</label>
@@ -45,19 +46,21 @@
             <label for="url">URL</label>
             <input name="url"
                    class="form-control"
-                   placeholder="https://youtu.be/uLWLashCXHE"
+                   placeholder="URL"
+                   value="https://youtu.be/uLWLashCXHE"
                    id="url"/>
 
             <label for="width">Width</label>
             <input name="width"
                    class="form-control"
-                   placeholder="100%"
+                   placeholder="Width"
+                   value="100%"
                    id="width"/>
 
             <label for="upload">Upload</label>
             <input name="upload"
+                   type="file"
                    class="form-control"
-                   placeholder="Choose File   No File Chosen"
                    id="upload"/>
 
             <a class="btn btn-default btn-primary btn-block"
