--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
@@ -11,13 +12,13 @@
 <body>
     <div class="container-fluid">
         <h2>Login</h2>
-        <!--<label for="username">Username</label>-->
+
         <input name="username"
+               type="text"
                class="form-control"
                placeholder="Username"
                id="username"/>
 
-        <!--<label style="margin-top: 10px" for="password">Password</label>-->
         <input name="password"
                type="password"
                class="form-control"
