--- a/public/assignment/page-edit.html
+++ b/public/assignment/page-edit.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Page</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -46,7 +47,7 @@
                                 <div class="col-xs-10">Name</div>
                                 <div class="col-xs-2">
                                     <a href="page-new.html">
-                                        <span class="pull-right glyphicon glyphicon-plus" style="color: white"></span>
+                                        <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                                     </a>
                                 </div>
                             </div>
@@ -55,7 +56,7 @@
                             <div class="row">
                                 <div class="col-xs-10">
                                     <a href="widget-list.html">
-                                        Facebook
+                                        Blog Post
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
@@ -69,7 +70,7 @@
                             <div class="row">
                                 <div class="col-xs-10">
                                     <a href="widget-list.html">
-                                        Twitter
+                                        Home
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
@@ -83,7 +84,7 @@
                             <div class="row">
                                 <div class="col-xs-10">
                                     <a href="widget-list.html">
-                                        Amazon
+                                        About
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
@@ -97,7 +98,7 @@
                             <div class="row">
                                 <div class="col-xs-10">
                                     <a href="widget-list.html">
-                                        Wikipedia
+                                        Contact Us
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
@@ -114,6 +115,7 @@
                     <input name="name"
                            class="form-control"
                            placeholder="Page Name"
+                           value="Blog Post"
                            id="name"/>
 
                     <label for="title">Title</label>
