--- a/public/assignment/page-list.html
+++ b/public/assignment/page-list.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pages List</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -30,7 +31,7 @@
                         <div class="col-xs-10">Name</div>
                         <div class="col-xs-2">
                             <a href="page-new.html">
-                                <span class="pull-right glyphicon glyphicon-plus" style="color: white"></span>
+                                <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                             </a>
                         </div>
                     </div>
@@ -39,7 +40,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <a href="widget-list.html">
-                                Facebook
+                                Blog Post
                             </a>
                         </div>
                         <div class="col-xs-2">
@@ -53,7 +54,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <a href="widget-list.html">
-                                Twitter
+                                Home
                             </a>
                         </div>
                         <div class="col-xs-2">
@@ -67,7 +68,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <a href="widget-list.html">
-                                Amazon
+                                About
                             </a>
                         </div>
                         <div class="col-xs-2">
@@ -81,7 +82,7 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <a href="widget-list.html">
-                                Wikipedia
+                                Contact Us
                             </a>
                         </div>
                         <div class="col-xs-2">
