--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -11,20 +12,18 @@
 <body>
     <div class="container-fluid">
         <h2>Register</h2>
-        <!--<label for="username">Username</label>-->
+
         <input name="username"
                class="form-control"
                placeholder="Username"
                id="username"/>
 
-        <!--<label style="margin-top: 10px" for="password">Password</label>-->
         <input name="password"
                type="password"
                class="form-control"
                placeholder="Password"
                id="password"/>
 
-        <!--<label style="margin-top: 10px" for="password">Password</label>-->
         <input name="verifypassword"
                type="password"
                class="form-control"
@@ -36,7 +35,7 @@
            role="button">Register</a>
 
         <a class="btn btn-default btn-danger btn-block"
-           href="index.html"
+           href="login.html"
            role="button">Cancel</a>
     </div>
 </body>
