--- a/public/assignment/website-edit.html
+++ b/public/assignment/website-edit.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Edit Website</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -46,7 +47,7 @@
                                 <div class="col-xs-10">Name</div>
                                 <div class="col-xs-2">
                                     <a href="website-new.html">
-                                        <span class="pull-right glyphicon glyphicon-plus" style="color: white"></span>
+                                        <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                                     </a>
                                 </div>
                             </div>
@@ -114,6 +115,7 @@
                     <input name="websitename"
                            class="form-control"
                            placeholder="Website Name"
+                           value="Facebook"
                            id="websitename"/>
 
                     <label for="description">Website Description</label>
@@ -121,7 +123,8 @@
                               rows="5"
                               class="form-control"
                               placeholder="Website Description"
-                              id="description"></textarea>
+                              id="description">Facebook is a social networking site which helps people to connect with their loved ones.
+                    </textarea>
 
                     <a class="btn btn-default btn-danger btn-block"
                        href="website-list.html"
