--- a/public/assignment/website-list.html
+++ b/public/assignment/website-list.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Website list</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -27,24 +28,24 @@
             <ul class="list-group">
                 <li class="list-group-item active">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4">Name</div>
-                        <div class="col-xs-4 col-sm-3">Updated</div>
+                        <div class="col-xs-5 col-sm-4">Name</div>
+                        <div class="col-xs-5 col-sm-3">Updated</div>
                         <div class="col-sm-3 hidden-xs">Visits</div>
                         <div class="col-xs-2">
                             <a href="website-new.html">
-                                <span class="pull-right glyphicon glyphicon-plus" style="color: white"></span>
+                                <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                             </a>
                         </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4">
+                        <div class="col-xs-5 col-sm-4">
                             <a href="page-list.html">
                                 Facebook
                             </a>
                         </div>
-                        <div class="col-xs-4 col-sm-3">07-14-2017</div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
                         <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
                             <a href="website-edit.html">
@@ -55,12 +56,12 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4">
+                        <div class="col-xs-5 col-sm-4">
                             <a href="page-list.html">
                                 Twitter
                             </a>
                         </div>
-                        <div class="col-xs-4 col-sm-3">07-14-2017</div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
                         <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
                             <a href="website-edit.html">
@@ -71,12 +72,12 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4">
+                        <div class="col-xs-5 col-sm-4">
                             <a href="page-list.html">
                                 Amazon
                             </a>
                         </div>
-                        <div class="col-xs-4 col-sm-3">07-14-2017</div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
                         <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
                             <a href="website-edit.html">
@@ -87,12 +88,12 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-6 col-sm-4">
+                        <div class="col-xs-5 col-sm-4">
                             <a href="page-list.html">
                                 Wikipedia
                             </a>
                         </div>
-                        <div class="col-xs-4 col-sm-3">07-14-2017</div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
                         <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
                             <a href="website-edit.html">
