--- a/public/assignment/website-new.html
+++ b/public/assignment/website-new.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>New Website</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -46,7 +47,7 @@
                                 <div class="col-xs-10">Name</div>
                                 <div class="col-xs-2">
                                     <a href="website-new.html">
-                                        <span class="pull-right glyphicon glyphicon-plus" style="color: white"></span>
+                                        <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                                     </a>
                                 </div>
                             </div>
