--- a/public/assignment/widget-youtube.html
+++ b/public/assignment/widget-youtube.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Widget Youtube</title>
-    <link href="../vendor/css/bootstrap/css/bootstrap.min.css"
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
@@ -32,7 +33,7 @@
             <label for="name">Name</label>
             <input name="name"
                    class="form-control"
-                   placeholder="Header"
+                   placeholder="Name"
                    id="name"/>
 
             <label for="text">Text</label>
@@ -45,7 +46,8 @@
             <label for="url">URL</label>
             <input name="url"
                    class="form-control"
-                   placeholder="https://youtu.be/uLWLashCXHE"
+                   placeholder="URL"
+                   value="https://youtu.be/uLWLashCXHE"
                    id="url"/>
 
             <label for="width">Width</label>
