Assignment 2 Third Commit

--- a/public/assignment/page-edit.html
+++ b/public/assignment/page-edit.html
@@ -25,6 +25,11 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-lg-8">
+                        <div class="navbar-text pull-left hidden-lg">
+                            <a href="page-list.html" class="piy-glyphicon">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            </a>
+                        </div>
                         <div class="navbar-text pull-right">
                             <a href="page-list.html" class="piy-glyphicon">
                                 <span class="glyphicon glyphicon-ok"></span>
