--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -30,12 +30,14 @@
             <input name="firstname"
                    class="form-control"
                    placeholder="First Name"
+                   value="Piyush"
                    id="firstname"/>
 
             <label for="lastname">Last Name</label>
             <input name="lastname"
                    class="form-control"
                    placeholder="Last Name"
+                   value="Goel"
                    id="lastname"/>
 
             <label for="username">Username</label>
@@ -50,13 +52,15 @@
                    type="email"
                    class="form-control"
                    placeholder="Email"
+                   value="goel.p@husky.neu.edu"
                    id="email"/>
 
             <label for="dob">Date of Birth</label>
             <input name="dob"
                    type="date"
                    class="form-control"
-                   placeholder="mm/dd/yyyy"
+                   placeholder="yyyy-mm-dd"
+                   value="1992-02-14"
                    id="dob"/>
 
             <a class="btn btn-default btn-primary btn-block"
