--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -44,7 +44,7 @@
             <input name="username"
                    readonly
                    class="form-control"
-                   value="Username"
+                   value="PiyushGoel1402"
                    id="username"/>
 
             <label for="email">Email</label>
