Assignment 2 Sixth Commit

--- a/public/assignment/website-edit.html
+++ b/public/assignment/website-edit.html
@@ -128,8 +128,7 @@
                               rows="5"
                               class="form-control"
                               placeholder="Website Description"
-                              id="description">Facebook is a social networking site which helps people to connect with their loved ones.
-                    </textarea>
+                              id="description">Facebook is a social networking site which helps people to connect with their loved ones.</textarea>
 
                     <a class="btn btn-default btn-danger btn-block"
                        href="website-list.html"
