--- a/public/assignment/widget-heading.html
+++ b/public/assignment/widget-heading.html
@@ -41,8 +41,7 @@
                       rows="5"
                       class="form-control"
                       placeholder="Text"
-                      id="text">US Senate Reaches Compromise on Emergency Zika Funding
-            </textarea>
+                      id="text">US Senate Reaches Compromise on Emergency Zika Funding</textarea>
 
             <label for="size">Size</label>
             <input name="size"
