Assignment 2 Seventh Commit

--- a/public/assignment/widget-heading.html
+++ b/public/assignment/widget-heading.html
@@ -44,11 +44,15 @@
                       id="text">US Senate Reaches Compromise on Emergency Zika Funding</textarea>
 
             <label for="size">Size</label>
-            <input name="size"
-                   class="form-control"
-                   placeholder="Size"
-                   value="3"
-                   id="size"/>
+            <select name="size"
+                    class="form-control piy-margin-bottom"
+                    id="size">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
 
             <a class="btn btn-default btn-danger btn-block"
                href="widget-list.html"
