--- a/public/assignment/page-new.html
+++ b/public/assignment/page-new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>New Page</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
@@ -128,6 +128,8 @@
                            placeholder="Page title"
                            id="title"/>
                 </div>
+            </div>
+        </div>
 
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
