--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="WamApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Home Page</title>
+    <script src="../vendor/angular/angular.js"></script>
+    <script src="../vendor/angular/angular-route.js"></script>
+    <script src="app.js"></script>
+    <script src="config.js"></script>
+    <script src="users/controllers/login.controller.client.js"></script>
+    <script src="users/controllers/profile.controller.client.js"></script>
+    <script src="user.service.client.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="piy-home">
-            Welcome to Assignment 2 Home Page!!
-        </div>
-
-        <a class="btn btn-default btn-primary btn-block"
-           href="login.html"
-           role="button">User Login</a>
-
-        <a class="btn btn-default btn-success btn-block"
-           href="register.html"
-           role="button">User Register</a>
-    </div>
+    <div ng-view></div>
 </body>
 </html>
