Assignment 3 Second Commit

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,6 +10,7 @@
     <script src="config.js"></script>
     <script src="users/controllers/login.controller.client.js"></script>
     <script src="users/controllers/profile.controller.client.js"></script>
+    <script src="users/controllers/register.controller.client.js"></script>
     <script src="user.service.client.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
