Assignment 3 Third Commit

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -11,7 +11,12 @@
     <script src="users/controllers/login.controller.client.js"></script>
     <script src="users/controllers/profile.controller.client.js"></script>
     <script src="users/controllers/register.controller.client.js"></script>
-    <script src="user.service.client.js"></script>
+    <script src="websites/controllers/website-list.controller.client.js"></script>
+    <script src="websites/controllers/website-new.controller.client.js"></script>
+
+    <script src="services/user.service.client.js"></script>
+    <script src="services/website.service.client.js"></script>
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
