Assignment 3 Fourth Commit

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -13,9 +13,14 @@
     <script src="users/controllers/register.controller.client.js"></script>
     <script src="websites/controllers/website-list.controller.client.js"></script>
     <script src="websites/controllers/website-new.controller.client.js"></script>
+    <script src="websites/controllers/website-edit.controller.client.js"></script>
+    <script src="pages/controllers/page-list.controller.client.js"></script>
+    <script src="pages/controllers/page-new.controller.client.js"></script>
+    <script src="pages/controllers/page-edit.controller.client.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
+    <script src="services/page.service.client.js"></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
