--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -17,10 +17,14 @@
     <script src="pages/controllers/page-list.controller.client.js"></script>
     <script src="pages/controllers/page-new.controller.client.js"></script>
     <script src="pages/controllers/page-edit.controller.client.js"></script>
+    <script src="widgets/controllers/widget-list.controller.client.js"></script>
+    <script src="widgets/controllers/widget-edit.controller.client.js"></script>
+    <script src="widgets/controllers/widget-chooser.controller.client.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
+    <script src="services/widget.service.client.js"></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
