--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Home Page</title>
+
+    <!--<link href="https://code.jquery.com/ui/1.11.4/themes/vader/jquery-ui.min.css"-->
+          <!--rel="stylesheet"/>-->
+    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
     <script src="../vendor/angular/angular.js"></script>
     <script src="../vendor/angular/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="directives/wbdv-sortable.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+
     <script src="views/users/controllers/login.controller.client.js"></script>
     <script src="views/users/controllers/profile.controller.client.js"></script>
     <script src="views/users/controllers/register.controller.client.js"></script>
