--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -7,14 +7,14 @@
 
     <!--<link href="https://code.jquery.com/ui/1.11.4/themes/vader/jquery-ui.min.css"-->
           <!--rel="stylesheet"/>-->
-    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="../vendor/angular/angular.js"></script>
     <script src="../vendor/angular/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="directives/wbdv-sortable.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>-->
 
     <script src="views/users/controllers/login.controller.client.js"></script>
     <script src="views/users/controllers/profile.controller.client.js"></script>
