--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -7,8 +7,8 @@
 
     <!--<link href="https://code.jquery.com/ui/1.11.4/themes/vader/jquery-ui.min.css"-->
           <!--rel="stylesheet"/>-->
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="../vendor/angular/angular.js"></script>
     <script src="../vendor/angular/angular-route.js"></script>
     <script src="app.js"></script>
