--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -14,7 +14,7 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="directives/wbdv-sortable.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
     <script src="views/users/controllers/login.controller.client.js"></script>
     <script src="views/users/controllers/profile.controller.client.js"></script>
