Assignment 5 seventh commit

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             <a href="https://github.com/PiyushGoel1302/goel-piyush-web-dev/">Your public repository at GitHub.com</a>
         </li>
         <li>
-            <a href="/lectures">Lectures</a>
+            <a href="lectures/">Lectures</a>
         </li>
     </ul>
 </body>
