--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -16,6 +16,13 @@
     <script src="directives/wbdv-sortable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
+    <!--textAngular libraries-->
+    <link href="../vendor/textAngular/textAngular.css" rel="stylesheet">
+    <script type="text/javascript" src="../vendor/textAngular/textAngular-rangy.min.js"></script>
+    <script type="text/javascript" src="../vendor/textAngular/textAngular-sanitize.min.js"></script>
+    <script type="text/javascript" src="../vendor/textAngular/textAngular.min.js"></script>
+
+    <!--Controllers-->
     <script src="views/users/controllers/login.controller.client.js"></script>
     <script src="views/users/controllers/profile.controller.client.js"></script>
     <script src="views/users/controllers/register.controller.client.js"></script>
@@ -28,16 +35,21 @@
     <script src="views/widgets/controllers/widget-list.controller.client.js"></script>
     <script src="views/widgets/controllers/widget-edit.controller.client.js"></script>
     <script src="views/widgets/controllers/widget-chooser.controller.client.js"></script>
+    <script src="views/widgets/controllers/widget-flickr-search.controller.client.js"></script>
 
+    <!--Services-->
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
+    <script src="services/flickr.service.client.js"></script>
 
+    <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="css/styles.css"
           rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <div ng-view class="ng-scope"></div>
