--- a/public/project/index.html
+++ b/public/project/index.html
@@ -63,6 +63,7 @@
     <script src="views/home/controllers/details.controller.client.js"></script>
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
+    <script src="views/user/controllers/new-profile.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
     <script src="views/place/controllers/place-search.controller.client.js"></script>
     <script src="views/place/controllers/place-details.controller.client.js"></script>
