--- a/public/project/index.html
+++ b/public/project/index.html
@@ -72,10 +72,12 @@
     <script src="views/follow/controllers/following.controller.client.js"></script>
     <script src="views/follow/controllers/host-details.controller.client.js"></script>
     <script src="views/follow/controllers/follower-details.controller.client.js"></script>
+    <script src="views/reviews/controllers/user-review.controller.client.js"></script>
 
     <!--Services-->
     <script src="services/user.service.client.js"></script>
     <script src="services/place.service.client.js"></script>
+    <script src="services/user-review.service.client.js"></script>
 
     <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
