--- a/public/index2.html
+++ b/public/index2.html
@@ -38,7 +38,7 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                   <p class="italic">Oh, hello, nice to meet you!</p>
                   <h1>My name is Piyush Goel.</h1>
-                  <!--<p class="italic">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>-->
+                  <p class="italic">This is my home page for the Web Development(CS 5610) course at Northeastern University, Boston, MA</p>
                   <!--<p class="italic">I have best results with nice pictures on the background or nice colours.</p>-->
                 </div>
               </div>
@@ -50,15 +50,61 @@
         <section id="page2">
           <div class="content">
             <div class="container clearfix">
-              <div class="row">
-                <div class="col-md-6"> 
-                  <h2 class="heading">About me</h2>
-                  <!--<p class="lead">This can be an about section or anything else ;)</p>-->
-                  <!--<p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>-->
-                  <!--<p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>-->
-                </div>
-                <div class="col-md-5 col-md-offset-1">
-                  <p><img src="landingPage/img/me1.jpg" alt="" class="img-responsive img-circle"></p>
+              <div class="row services">
+                <div class="col-md-12">
+                  <h1 class="heading">My Work</h1>
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <a  href="assignment/">
+                        <div class="box">
+                          <div class="icon"><i class="fa fa-desktop"></i></div>
+                          <h3 class="heading">Assignment</h3>
+                          <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="col-sm-4">
+                      <a href="project/index.html">
+                        <div class="box">
+                          <div class="icon"><i class="fa fa-steam"></i></div>
+                          <h3 class="heading">Project</h3>
+                          <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="col-sm-4">
+                      <a href="https://github.com/PiyushGoel1302/goel-piyush-web-dev/">
+                        <div class="box">
+                          <div class="icon"><i class="fa fa-github"></i></div>
+                          <h3 class="heading">Github</h3>
+                          <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <!--<div class="row">-->
+                    <!--<div class="col-sm-4">-->
+                      <!--<div class="box">-->
+                        <!--<div class="icon"><i class="fa fa-lightbulb-o"></i></div>-->
+                        <!--<h4 class="heading">Consulting</h4>-->
+                        <!--<p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-4">-->
+                      <!--<div class="box">-->
+                        <!--<div class="icon"><i class="fa fa-envelope-o"></i></div>-->
+                        <!--<h4 class="heading">Email Marketing</h4>-->
+                        <!--<p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-4">-->
+                      <!--<div class="box">-->
+                        <!--<div class="icon"><i class="fa fa-user"></i></div>-->
+                        <!--<h4 class="heading">UX &amp; UI</h4>-->
+                        <!--<p>Am terminated it excellence invitation projection as. She graceful shy. </p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                  <!--</div>-->
                 </div>
               </div>
             </div>
@@ -68,55 +114,15 @@
         <section id="page3" class="section-gray">
           <div class="content">
             <div class="container clearfix">
-              <div class="row services">
-                <div class="col-md-12">
-                  <h2 class="heading">Services</h2>
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-desktop"></i></div>
-                        <h4 class="heading">Webdesign</h4>
-                        <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-print"></i></div>
-                        <h4 class="heading">Print</h4>
-                        <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-globe"></i></div>
-                        <h4 class="heading">SEO and SEM</h4>
-                        <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-lightbulb-o"></i></div>
-                        <h4 class="heading">Consulting</h4>
-                        <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-envelope-o"></i></div>
-                        <h4 class="heading">Email Marketing</h4>
-                        <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-user"></i></div>
-                        <h4 class="heading">UX &amp; UI</h4>
-                        <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
-                      </div>
-                    </div>
-                  </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <h2 class="heading">About me</h2>
+                  <!--<p class="lead">This can be an about section or anything else ;)</p>-->
+                  <p>I am currently pursuing my Master of Sciencein Computer Science at Northeastern University.</p>
+                  <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+                </div>
+                <div class="col-md-5 col-md-offset-1">
+                  <p><img src="landingPage/img/me1.jpg" alt="" class="img-responsive img-circle"></p>
                 </div>
               </div>
             </div>
@@ -184,51 +190,74 @@
             <div class="container clearfix">
               <div class="row">
                 <div class="col-md-12">
-                  <h2 class="heading">Contact</h2>
+                  <h2 class="heading">Contact Me</h2>
+                  <!--<div class="row">-->
+                    <!--<div class="col-md-6">-->
+                      <!--<form id="contact-form" method="post" action="contact.php" class="contact-form">-->
+                        <!--<div class="controls">-->
+                          <!--<div class="row">-->
+                            <!--<div class="col-sm-6">-->
+                              <!--<div class="form-group">-->
+                                <!--<label for="name">Your firstname *</label>-->
+                                <!--<input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">-->
+                              <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="col-sm-6">-->
+                              <!--<div class="form-group">-->
+                                <!--<label for="surname">Your lastname *</label>-->
+                                <!--<input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">-->
+                              <!--</div>-->
+                            <!--</div>-->
+                          <!--</div>-->
+                          <!--<div class="form-group">-->
+                            <!--<label for="surname">Your email *</label>-->
+                            <!--<input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">-->
+                          <!--</div>-->
+                          <!--<div class="form-group">-->
+                            <!--<label for="surname">Your message for us *</label>-->
+                            <!--<textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>-->
+                          <!--</div>-->
+                          <!--<div class="text-center">-->
+                            <!--<input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">-->
+                          <!--</div>-->
+                        <!--</div>-->
+                      <!--</form>-->
+                    <!--</div>-->
                   <div class="row">
-                    <div class="col-md-6">
-                      <form id="contact-form" method="post" action="contact.php" class="contact-form">
-                        <div class="controls">
-                          <div class="row">
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="name">Your firstname *</label>
-                                <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
-                              </div>
-                            </div>
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="surname">Your lastname *</label>
-                                <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your email *</label>
-                            <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your message for us *</label>
-                            <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                          </div>
-                          <div class="text-center">
-                            <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="col-md-6">
-                      <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                      <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                      <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                    <div class="col-md-12">
+                      <div class="col-md-4">
+                        <h5 class="text-center">Swing by for a cup of <i class="fa fa-coffee"></i> at</h5>
+                        <p class="text-center">37 St. Germain Steert #6, Boston, MA</p>
+                      </div>
+                      <div class="col-md-4">
+                        <h5 class="text-center">Write me your comments at</h5>
+                        <p class="text-center">goel.p@husky.neu.edu</p>
+                      </div>
+                      <div class="col-md-4">
+                        <h5 class="text-center">Call me for a conversation at</h5>
+                        <p class="text-center">857-544-4732</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="row copyright">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h5 class="text-center">Follow me</h5>
+                      <!--<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>-->
+                      <!--<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>-->
+                      <p class="social">
+                        <a href="https://www.facebook.com/Piyush.goel14" title="" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://github.com/PiyushGoel1302" title="" class="github"><i class="fa fa-github"></i></a>
+                        <a ng-href="plus.google.com/+PiyushGoel1402" title="" class="gplus"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.instagram.com/teetotaler_drunkard/" title="" class="instagram"><i class="fa fa-instagram"></i></a>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="row copya ght">
                     <div class="col-md-6">
                       <p>&copy;2017 Piyush Goel</p>
                     </div>
                     <div class="col-md-6">
-                      <p class="credit">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
+                      <p class="credit pull-right">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
                        <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
                     </div>
                   </div>
