--- a/public/project/index.html
+++ b/public/project/index.html
@@ -73,6 +73,7 @@
     <script src="views/follow/controllers/host-details.controller.client.js"></script>
     <script src="views/follow/controllers/follower-details.controller.client.js"></script>
     <script src="views/reviews/controllers/user-review.controller.client.js"></script>
+    <script src="views/reviews/controllers/review.controller.client.js"></script>
 
     <!--Services-->
     <script src="services/user.service.client.js"></script>
