--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="landingPage/css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+    <!-- Tweaks for older IEs--><!--[if lt IE 9]-->
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
@@ -59,7 +59,7 @@
                         <div class="box">
                           <div class="icon"><i class="fa fa-desktop"></i></div>
                           <h3 class="heading">Assignment</h3>
-                          <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                          <p>As part of our assignment we created a web app which allows you to create template for your website.</p>
                         </div>
                       </a>
                     </div>
@@ -68,7 +68,7 @@
                         <div class="box">
                           <div class="icon"><i class="fa fa-steam"></i></div>
                           <h3 class="heading">Project</h3>
-                          <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                          <p>TravelMate: A web app which allow users to search for places of interest in any city and connect with people who are ready to be your host to make your trip extraordinary</p>
                         </div>
                       </a>
                     </div>
@@ -77,7 +77,7 @@
                         <div class="box">
                           <div class="icon"><i class="fa fa-github"></i></div>
                           <h3 class="heading">Github</h3>
-                          <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                          <p>Click here for my Github repository containing my Project and Assignments for this course</p>
                         </div>
                       </a>
                     </div>
@@ -95,8 +95,8 @@
                 <div class="col-md-6">
                   <h2 class="heading">About me</h2>
                   <!--<p class="lead">This can be an about section or anything else ;)</p>-->
-                  <p>I am currently pursuing my Master of Sciencein Computer Science at Northeastern University.</p>
-                  <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+                  <p>I am currently pursuing my Master of Science in Computer Science at Northeastern University.</p>
+                  <p>I believe in idea of how a small piece of code makes our life easier. I love coding as well as data analysis.</p>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                   <p><img src="landingPage/img/me1.jpg" alt="" class="img-responsive img-circle"></p>
@@ -105,62 +105,7 @@
             </div>
           </div>
         </section>
-        <!--<section id="page4">-->
-          <!--<div class="content">-->
-            <!--<div class="container clearfix">-->
-              <!--<div class="row">-->
-                <!--<div class="col-md-12">-->
-                  <!--<h2 class="heading">Portfolio</h2>-->
-                  <!--<p class="text-center">You can make also a portfolio or image gallery.</p>-->
-                  <!--<div class="row">-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-1.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-3.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                  <!--</div>-->
-                  <!--<div class="row">-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-4">-->
-                      <!--<div class="box"><a href="#" title=""><img src="landingPage/img/portfolio-6.jpg" alt="" class="img-responsive"></a></div>-->
-                    <!--</div>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</section>-->
-        <!--&lt;!&ndash; page 5&ndash;&gt;-->
-        <!--<section id="page5" class="section-gray">-->
-          <!--<div class="content">-->
-            <!--<div class="container clearfix">-->
-              <!--<div class="row">-->
-                <!--<div class="col-md-12">-->
-                  <!--<h2 class="heading">Text page</h2>-->
-                  <!--<div class="row">-->
-                    <!--<div class="col-sm-6">-->
-                      <!--<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>-->
-                      <!--<p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-6">-->
-                      <!--<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>-->
-                      <!--<p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>-->
-                    <!--</div>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</section>-->
+
         <!-- page 6-->
         <section id="page6">
           <div class="content">
@@ -187,8 +132,6 @@
                   <div class="row">
                     <div class="col-md-12">
                       <h5 class="text-center">Follow me</h5>
-                      <!--<p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>-->
-                      <!--<p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>-->
                       <p class="social">
                         <a href="https://www.facebook.com/Piyush.goel14" title="" class="facebook"><i class="fa fa-facebook"></i></a>
                         <a href="https://github.com/PiyushGoel1302" title="" class="github"><i class="fa fa-github"></i></a>
@@ -203,7 +146,6 @@
                     </div>
                     <div class="col-md-6">
                       <p class="credit pull-right">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
-                       <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
                     </div>
                   </div>
                 </div>
